--- a/bento-grid-main/index.html
+++ b/bento-grid-main/index.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
  <div class="grid-container">
-    <div class="grid-item" id="celda1"><p>Create and schedule content <br><span id="span_purpura">quicker.</span></p> <img id="imagen-celda1" src="assets/images/illustration-create-post.webp"></div>
+    <div class="grid-item" id="celda1"><p>Create and schedule content <span id="span_purpura">quicker.</span></p> <img id="imagen-celda1" src="assets/images/illustration-create-post.webp"></div>
     <div class="grid-item" id="celda2"><p id="frase-arriba-celda2">Social Media <span id="span_amarillo">10x</span><br><i>Faster </i>with AI</p><br>
       <img id="imagen-celda2" src="assets/images/illustration-five-stars.webp">
       <p id="frase-abajo-celda2">Over 4,000 5-star reviews</p>
@@ -27,7 +27,7 @@
     <div class="grid-item" id="celda9"><img id="imagen-celda9" src="assets/images/illustration-grow-followers.webp"><p>Grow followers 
      <br> with non-stop content.</p></div>
     <div class="grid-item" id="celda11"><p><span id="texto-celda11"> >56%</span> <br> faster audience growth </p><br><img id="imagen-celda11" src="assets/images/illustration-audience-growth.webp"></div>
-    <div class="grid-item" id="celda17"><p>Write your <br> content <br> using AI.</p><img id="imagen-celda17" src="assets/images/illustration-ai-content.webp"></div>
+    <div class="grid-item" id="celda17"><p>Write your <span>content</span> <span>using AI.</span></p><img id="imagen-celda17" src="assets/images/illustration-ai-content.webp"></div>
 </div>
 
 </body>
